# moodle-xml-rs

./: Cargo.toml  README.md
.github/workflows/: .fuzz.yml.swp  fuzz.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: answer.rs  lib.rs  main.rs  question.rs  quiz.rs  xml_util.rs
tests/: xml_tests.rs
