[package]
name = "moodle-xml"
description = "A library for generating Moodle quizzes in XML format."
repository = "https://github.com/ouspg/moodle-xml-rs"
authors = ["Niklas Saari", "Eetu Lassi"]
readme = "README.md"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["moodle", "xml", "quiz"]

[dependencies]
cargo-fuzz = "0.12.0"
xml-rs = "0.8"

[dev-dependencies]
tempfile = "3"
